Fixed z-index for divider

--- a/src/components/networkAccountSelector/style.less
+++ b/src/components/networkAccountSelector/style.less
@@ -42,7 +42,7 @@
         width: 320px;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .50);
         padding: 20px 0 20px 0;
-        z-index: 1;
+        z-index: 2;
         .title {
             font-weight: 600;
             margin: 0 0 20px 20px;
@@ -76,7 +76,7 @@
         width: 320px;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .50);
         padding: 20px 0 20px 0;
-        z-index: 1;
+        z-index: 2;
         .title {
             font-weight: 600;
             margin: 0 0 20px 20px;
