--- a/src/style/index.less
+++ b/src/style/index.less
@@ -149,9 +149,8 @@ a:active,a:focus {
 
 .resizer {
     box-sizing: border-box;
-    background: #000;
     opacity: .4;
-    z-index: 30;
+    z-index: 1;
     background-clip: padding-box;
     width: 11px;
     margin: 0 -5px;
